# vivarium

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  fly.toml
.claude/: settings.json
.claude/hooks/: ex-compile.sh  py-compile.sh
PLANS/: 00-sprint.md  01-bootstrap.md  01-sprint.md  02-keeper.md  02-sprint.md  03-protocol.md  tech-debt.md
bootstrap/: Cargo.toml  bootstrap.py  context.py  tools.py
bootstrap/src/: api.rs  context.rs  main.rs  tools.rs
gallery/: Dockerfile  fly.toml  go.mod  main.go
keeper/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
keeper/config/: config.exs  runtime.exs
keeper/lib/: keeper.ex
keeper/lib/keeper/: application.ex  budget.ex  checkpoint_meta.ex  config.ex  gallery.ex  git.ex  seed.ex  sprites.ex  telegram.ex  terrarium.ex  wake.ex
keeper/lib/mix/tasks/: sprint0.ex
keeper/test/: keeper_test.exs
seed/: AGENTS.md  soul.md
